--- a/Sniffer/packages.config
+++ b/Sniffer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="PacketDotNet" version="0.13.0" targetFramework="net452" />
-  <package id="SharpPcap" version="4.2.0" targetFramework="net452" />
+  <package id="PacketDotNet" version="1.0.1" targetFramework="net452" />
+  <package id="SharpPcap" version="4.6.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net452" />
 </packages>
